# secure-wallet-api-rust

./: .env  Cargo.toml  README.md
src/: main.rs
src/controllers/: mod.rs  wallet_controller.rs
src/middleware/: auth.rs
src/models/: auth.rs  user.rs
src/routes/: auth.rs  mod.rs
src/services/: wallet_service.rs
src/utils/: auth_token.rs
